<resources>
    <string name="app_name">Xcesso</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string-array name="access_types">
        <item>--select access type--</item>
        <item>contacts</item>
        <item>file</item>
        <item>profile</item>
        <item>location</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

    <string name="passcode_fragment_title">Current PassCode</string>
    <string name="contact_fragment_title">Manage Contacts</string>
    <string name="edit_contact">Edit Contact</string>





    <string name="edit_str">EDIT</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="add">Add</string>
    <string name="max_contacts_allowed_str">Maximum 4 Contacts Allowed</string>
    <string name="yes">Yes</string>
    <string name="confirm_dele_str">Do you really want to delete this contact?</string>
    <string name="del_confirm_title">Confirm Deletion</string>
    <string name="tag_contact_str">contact</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">DELETE</string>
    <string name="exit">EXIT</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="history_del_info">Press long to delete</string>
    <string name="del_confrim_history_str">Do you want to delete this HISTORY ITEM?</string>
    <string name="str_history_del_confirm">Do you really want to delete this History Item?</string>




    <string name="app_intro_skip">Skip</string>


    <string name="intro1_welcome">Welcome to Xcesso</string>
    <string name="intro1_1">Access Your Phone via Text Messages</string>

    <string name="intro1_2">Now you dont have to worry about losing you phone</string>
    <string name="intro2_1">Sign up for the first time you start application</string>
    <string name="intro2_2">Provide all the details</string>
    <string name="intro6_1">Give required permissions to the application</string>
    <string name="intro9_1">You can access menu by pressing the icon in top left corner on screen</string>
    <string name="intro9_2">You can see your profile, Manage trusted contacts, View your history, View tutorial, Change passcode and manage settings</string>
    <string name="intro10_1">You can Add your Trusted Contacts by pressing the Plus icon on top right corner on this screen</string>
    <string name="intro10_2">You can add only 4 contacts</string>
    <string name="intro10_3">"You trusted contacts can access all the settings that you have enabled by using text message</string>
    <string name="intro11_1">You can Edit Contacts by swiping them to the right</string>
    <string name="intro11_2">You can Delete contacts by swiping them to the left</string>
    <string name="intro12_1">You access phone  of some other person by sending sms if your caontact is added in their trusted contact list</string>
    <string name="intro12_2">Format of sms can change according to the access type</string>
    <string name="intro12_a">a. Passcode+AccessType+Filename+Email</string>
    <string name="intro12_b">b. Passcode+Contact+ContactName</string>
    <string name="intro12_c">c. Passcode+Profile</string>
    <string name="intro12_d">d. Passcode+Location</string>
    <string name="intro14_1">You can view settings of application</string>
    <string name="intro14_2">Your trusted contacts can access only those settings that you have enabled</string>
    <string name="intro15_1">You can also share your contents with people</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
