<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:layout_weight="10"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="29dp"
        android:text="Send SMS"
        android:textColor="@color/White"
        android:background="@color/colorPrimary"
        android:textSize="27sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_1"
            android:textColor="@color/Black"
            android:textSize="17sp"
            android:drawableLeft="@drawable/indicator_dot_grey"
            android:drawableStart="@drawable/indicator_dot_grey"
            android:drawablePadding="10dip"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_2"
            android:textColor="@color/Black"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/indicator_dot_grey"
            android:drawableStart="@drawable/indicator_dot_grey"
            android:drawablePadding="10dip"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_a"
            android:layout_marginLeft="30dp"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_b"
            android:layout_marginLeft="30dp"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_c"
            android:layout_marginLeft="30dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro12_d"
            android:layout_marginLeft="30dp"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>
</LinearLayout>


