<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    tools:context="com.xcesso.SetPasswordActivity">


<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter Password"
        android:id="@+id/tvEnterPassword"
        android:textColor="@color/DarkSlateGray"
        android:textSize="@dimen/table_text_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/table_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etEnterPassText"
            android:layout_below="@id/tvEnterPassword"
            android:textColor="@color/Black"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text=""
            /-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter App Startup Password"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
       android:textSize="@dimen/keypadButtonSize"


        />
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/rl1"
    android:layout_marginTop="@dimen/relativeLayout1_marginTop"

    ><!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter Password"
        android:id="@+id/tvEnterPassword"
        android:textColor="@color/DarkSlateGray"
        android:textSize="@dimen/table_text_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etEnterPassText"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/editText_marginBottom"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text=""
        android:textSize="@dimen/default_text_size"

        android:hint="Enter a 4 digit PIN"
        android:gravity="center"
        android:maxLines="1"

        />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/deletebackblack"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:layout_alignRight="@+id/etEnterPassText"

        android:layout_alignBottom="@id/etEnterPassText"
        android:id="@+id/ImageDeleteBack" />


</RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_centerInParent="true"
        android:id="@+id/rl2"
        >
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/numericPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/table_top_margin"
        android:layout_marginLeft="@dimen/table_margin"
        android:layout_marginRight="@dimen/table_margin"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_centerHorizontal="true"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/button1"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button3"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/button4"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button5"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button6"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/button7"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button8"
                android:layout_width="@dimen/table_data_width"
                android:layout_weight="@dimen/table_data_weight"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button9"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/buttonExit"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/DarkSlateGray"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <Button
                android:id="@+id/button0"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>
            <!--
                        <ImageButton
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src=""
                            android:padding="@dimen/table_data_padding"
                            android:layout_margin="@dimen/table_data_margin"
                            android:background="@android:color/transparent"
                            android:id="@+id/ImageDeleteBack"
            </ImageButton>-->

            <Button
                android:id="@+id/imageView"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/table_text_size"
                android:textColor="@color/DarkSlateGray"
                android:padding="@dimen/table_data_padding"
                android:layout_margin="@dimen/table_data_margin"
                android:background="@android:color/transparent"
                >
            </Button>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>
    </TableLayout>
    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/rl2"
    android:id="@+id/rl3"
    android:padding="5dp"
    android:layout_marginTop="@dimen/ConfirmButton_marginTop"
    >
    <Button
        android:id="@+id/buttonConirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Confirm"


        android:padding="@dimen/dots_dimensions"
        android:layout_margin="@dimen/ConfirmButton_margin"

        android:layout_centerHorizontal="true"

        >
    </Button>
</RelativeLayout>

</RelativeLayout>
